# dsh

./: .gitignore  .gitmodules  CMakeLists.txt  Readme.md  bootstrap.bat  changelog.txt  install.bat  prepare-release.bat
.github/workflows/: ccpp.yml
AppJS/Benchmark/: app.css  app.min.css  app.min.js  index.core.html  index.html
AppJS/Benchmark/src/: app.js  main.js  mainpage.js  template.js
AppJS/Chess/: app.css  index.html
AppJS/Chess/src/: app.js  board.js  game.js  pieces.js
AppJS/Core/: Readme.md  app.css  index.html
AppJS/Core/src/: app.js  main.js
AppJS/Easing/: Readme.md  app.css  app.min.css  app.min.js  debug.html  index.html
AppJS/Easing/src/: concat.min.js  hintpage.js  main.js  mainpage.js
AppJS/LifeCounter/: Readme.md  app.css  app.min.css  app.min.js  index.core.html  index.html
AppJS/LifeCounter/src/: _settings.js  app.js  dice.js  helper.js  main.js  score.js  settings.js  template.js  texts_cz.js  texts_en.js  timer.js  timer_settings.js
Environment/: CMakeLists.txt  bootstrap.bat  doomsh.cmd  dsh.bat  unzip.bat  unzip.vbs  wget.bat
Environments/: doomsh.cmd
Libraries/: CMakeLists.txt  build-gnu.bat  build-vs.bat  changelog.txt  prepare-release.bat  purge.bat  readme.md
Libraries/Bitmap/: Bitmap.cpp  Bitmap.hpp  CMakeLists.txt  IO.cpp  IO.hpp  Main.cpp  Makefile  Makefile.in  Palette.cpp  RawHeaders.cpp  RawHeaders.hpp  _Bitmap.cpp  _Bitmap.hpp
Libraries/Bitmap/tests/: BitmapTests.cpp  CMakeLists.txt  Comparators.hpp  Main.cpp
Libraries/Buffer/: Buffer.hpp  Makefile  main.cpp
Libraries/Buffer/tests/: main.cpp
Libraries/Config/: Args.cpp  Args.hpp  CMakeLists.txt  Config.cpp  Config.hpp  ConfigItem.cpp  ConfigItem.hpp  Csv.cpp  Csv.hpp  Ini.cpp  Ini.hpp  Item.cpp  Item.hpp  Makefile  Makefile.in  main.cpp
Libraries/Config/tests/: ArgsTest.cpp  ArgsTests.cpp  CMakeLists.txt  CsvTests.cpp  Helper.cpp  Helper.hpp  IniTests.cpp  ItemTests.cpp  TestCases.hpp  _main.cpp  iniFail1.ini  main.cpp  readme.md  test0.ini  test1.csv  test1.ini  test2.csv  test3.csv  test4.csv  test6.csv  test7.csv  test8.csv  test9.csv
Libraries/GameStuff/: ItemLookup.hpp  Main.cpp  Readme.md
Libraries/GameStuff/LevelD/: Makefile
Libraries/GameStuff/LevelD/ParserModules/: ParserModule.hpp
Libraries/LevelD/: CMakeLists.txt  LevelD.cpp  LevelD.hpp  LevelD.md  LevelDHandler.cpp  LevelDHandler.hpp  Main.cpp
Libraries/LevelD/Bytestream/: Bytestream.hpp  BytestreamIn.cpp  BytestreamOut.cpp  CMakeLists.txt  Main.cpp  Readme.md  SwapEndian.hpp
Libraries/LevelD/Modules/: ModuleEvents.cpp  ModuleItems.cpp  ModuleMesh.cpp  ModuleMetadata.cpp  ModuleNpcs.cpp  ModuleNpcsItemsPlayers.cpp  ModulePaths.cpp  ModulePlayers.cpp  ModuleThings.cpp  ModuleTriggers.cpp  Top.hpp
Libraries/LevelD/ParserModules/: ModuleMesh.cpp  ModuleMetadata.cpp  ModulePlayers.cpp  ParserModule.hpp  ParserModuleMesh.cpp  Top.cpp  Top.hpp
Libraries/LevelD/Tests/: AllTests.cpp  Assertions.cpp  Assertions.hpp  BytestreamTests.cpp  CMakeLists.txt  Helpers.cpp  Helpers.hpp  Main.cpp  MeshTests.cpp  MetadataTests.cpp  PathsTests.cpp  Test.hpp  TestAll.cpp  TestItems.cpp  TestMesh.cpp  TestMetadata.cpp  TestNpcs.cpp  TestPlayers.cpp  ThingsTests.cpp  TriggersTests.cpp
Libraries/LevelD/_Bindings/EcmaScript6/: leveld.js  readme.md
Libraries/LevelD/_Bindings/EcmaScript6/tests/: SpecRunner.html  tests.html  tests.js
Libraries/LevelD/_Bindings/EcmaScript6/tests/spec/: ByteStreamOutSpec.js  BytestreamInSpec.js  LeveldSpec.js
Libraries/Logger/: CMakeLists.txt  Logger.cpp  Logger.hpp  Makefile  Makefile.in
Libraries/Perlin/: CMakeLists.txt  Convert.cpp  Convert.hpp  Generate.hpp  Gradient.hpp  GradientMath.hpp  Math.cpp  Math.hpp  Perlin.cpp  Perlin.hpp  RawNoiseGenerator.cpp  Vector.cpp  Vector.hpp  VectorIndex.hpp  VectorMath.cpp  VectorMath.hpp  perlin-test.cpp  specs.md
Libraries/Perlin/tests/: CMakeLists.txt  ConvertTests.cpp  GradientMathTests.cpp  GradientTests.cpp  Main.cpp  MathTests.cpp  VectorMathTests.cpp  VectorTests.cpp  VectorTests.hpp
Libraries/Strings/: CMakeLists.txt  Makefile  Makefile.in  Strings.cpp  Strings.hpp
Libraries/Strings/tests/: CMakeLists.txt  main.cpp
Libraries/Testrunner/: CMakeLists.txt  Main.cpp  Test.hpp
Libraries/Testrunner template/: Readme.md
Libraries/Testrunner/demo/: CMakeLists.txt  Main.cpp
Libraries/Testrunner/include/: Test.hpp
Libraries/Waves/: Main.cpp  Makefile  Makefile.in  Waves.cpp  Waves.hpp
Utilities/: CMakeLists.txt  Makefile.in
Utilities/Hexrgb/: Main.cpp  Makefile  Makefile.in
Utilities/Makegen/: Main.cpp  Makefile  Makefile.full  Makefile.in  Makegen.cpp  Makegen.hpp
Utilities/jsbloat/: CMakeLists.txt  IO.cpp  IO.hpp  Logger.hpp  Main.cpp  Makefile  Makefile.in  ObfuscatedId.hpp  Obfuscation.cpp  Obfuscation.hpp  SourceFile.cpp  SourceFile.hpp  Usage.hpp
Utilities/leveld-migration-tool/: CMakeLists.txt  Main.cpp
Utilities/leveld-tool/: CMakeLists.txt  Main.cpp
cmake/: dependencies.cmake
